Implemented a system to load all of the application's details into a list with ApplicationInfo objects. Which can then be used to display these applications within the launcher

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=تعذر إغلاق "سياق الوصول إلى البيانات"
+CouldntCreateDAC=تعذر إنشاء "سياق الوصول إلى البيانات"
+CouldntLoadApplicationInfos=تعذر تحميل تفاصيل التطبيقات من قاعدة البيانات.
 Error=خطأ
 ErrorLoadingDataFromDisk=واجه البرنامج خطأ أثناء محاولة تحميل البيانات من القرص. 
 ErrorLoadingJam54LauncherConfig=تعذر تحميل config / prefs من Jam54LauncherConfig.properties
