--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Konnte "Datenzugriffskontext" nicht schließen
+CouldntCreateDAC=Konnte keinen "Datenzugriffskontext" erstellen
+CouldntLoadApplicationInfos=Die Anwendungsdetails konnten nicht aus der Datenbank geladen werden.
 Error=Fehler
 ErrorLoadingDataFromDisk=Das Programm hat beim Versuch, Daten von der Festplatte zu laden, einen Fehler festgestellt. 
 ErrorLoadingJam54LauncherConfig=Konfiguration/Einstellungen konnten nicht aus Jam54LauncherConfig.properties geladen werden
