--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=No se ha podido cerrar el "contexto de acceso a datos"
+CouldntCreateDAC=No se ha podido crear el "contexto de acceso a los datos"
+CouldntLoadApplicationInfos=No se han podido cargar los datos de las aplicaciones desde la base de datos.
 Error=Error
 ErrorLoadingDataFromDisk=El programa encontró un error al intentar cargar datos desde el disco. 
 ErrorLoadingJam54LauncherConfig=No se pudo cargar la configuración/preferencias de Jam54LauncherConfig.properties
