--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Ei saanud sulgeda "andmetele juurdepääsu konteksti"
+CouldntCreateDAC=Ei saanud luua "andmetele juurdepääsu konteksti"
+CouldntLoadApplicationInfos=Rakenduste üksikasju ei saanud andmebaasist laadida.
 Error=Viga
 ErrorLoadingDataFromDisk=Programmil tekkis kettalt andmete laadimisel viga. 
 ErrorLoadingJam54LauncherConfig=Jam54LauncherConfig.propertiesist ei saanud laadida config/prefs
