--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Impossible de fermer le "contexte d'accès aux données".
+CouldntCreateDAC=Impossible de créer le "contexte d'accès aux données".
+CouldntLoadApplicationInfos=Impossible de charger les détails des applications à partir de la base de données.
 Error=Erreur
 ErrorLoadingDataFromDisk=Le programme a rencontré une erreur lors de la tentative de chargement des données à partir du disque. 
 ErrorLoadingJam54LauncherConfig=Impossible de charger config/prefs depuis Jam54LauncherConfig.properties
