--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC="डेटा एक्सेस प्रसंग" बंद नहीं कर सका
+CouldntCreateDAC="डेटा एक्सेस प्रसंग" नहीं बना सका
+CouldntLoadApplicationInfos=डेटाबेस से एप्लिकेशन का विवरण लोड नहीं किया जा सका।
 Error=गलती
 ErrorLoadingDataFromDisk=डिस्क से डेटा लोड करने का प्रयास करते समय प्रोग्राम को एक त्रुटि का सामना करना पड़ा। 
 ErrorLoadingJam54LauncherConfig=Jam54LauncherConfig.properties से config/prefs लोड नहीं कर सका
