--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Tidak dapat menutup "konteks akses data"
+CouldntCreateDAC=Tidak dapat membuat "konteks akses data"
+CouldntLoadApplicationInfos=Tidak dapat memuat detail aplikasi dari database.
 Error=Kesalahan
 ErrorLoadingDataFromDisk=Program mengalami kesalahan saat mencoba memuat data dari disk. 
 ErrorLoadingJam54LauncherConfig=Tidak dapat memuat konfigurasi/pref dari Jam54LauncherConfig.properties
