--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC="データアクセスコンテキスト "を閉じることができませんでした
+CouldntCreateDAC=データアクセスコンテキストを作成できませんでした。
+CouldntLoadApplicationInfos=データベースからアプリケーションの詳細を読み込むことができませんでした。
 Error=エラー
 ErrorLoadingDataFromDisk=ディスクからデータを読み込もうとしているときに、プログラムでエラーが発生しました。
 ErrorLoadingJam54LauncherConfig=Jam54LauncherConfig.properties から構成/設定を読み込めませんでした
