--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC="데이터 액세스 컨텍스트"를 닫을 수 없습니다.
+CouldntCreateDAC="데이터 액세스 컨텍스트"를 만들 수 없습니다.
+CouldntLoadApplicationInfos=데이터베이스에서 응용 프로그램의 세부 정보를 로드할 수 없습니다.
 Error=오류
 ErrorLoadingDataFromDisk=디스크에서 데이터를 로드하는 동안 프로그램에 오류가 발생했습니다. 
 ErrorLoadingJam54LauncherConfig=Jam54LauncherConfig.properties에서 config/prefs를 로드할 수 없습니다.
