--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Kon "data access context" niet sluiten
+CouldntCreateDAC=Kon geen "data access context" creëren
+CouldntLoadApplicationInfos=Kon de details van de applicaties niet laden vanuit de database.
 Error=Fout
 ErrorLoadingDataFromDisk=Er is een fout opgetreden tijdens het laden van gegevens van de schijf. 
 ErrorLoadingJam54LauncherConfig=Kon config/prefs niet laden van Jam54LauncherConfig.properties
