--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Não foi possível fechar o "contexto de acesso aos dados".
+CouldntCreateDAC=Não foi possível criar "contexto de acesso aos dados".
+CouldntLoadApplicationInfos=Não foi possível carregar os detalhes dos aplicativos no banco de dados.
 Error=Erro
 ErrorLoadingDataFromDisk=O programa encontrou um erro ao tentar carregar dados do disco. 
 ErrorLoadingJam54LauncherConfig=Não foi possível carregar config/prefs de Jam54LauncherConfig.properties
