--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=Не удалось закрыть "контекст доступа к данным"
+CouldntCreateDAC=Не удалось создать "контекст доступа к данным"
+CouldntLoadApplicationInfos=Не удалось загрузить сведения о приложениях из базы данных.
 Error=Ошибка
 ErrorLoadingDataFromDisk=Программа обнаружила ошибку при попытке загрузки данных с диска. 
 ErrorLoadingJam54LauncherConfig=Не удалось загрузить конфигурацию/префы из Jam54LauncherConfig.properties.
