--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC="Veri erişim bağlamı" kapatılamadı
+CouldntCreateDAC="Veri erişim bağlamı" oluşturulamadı
+CouldntLoadApplicationInfos=Uygulamaların ayrıntıları veritabanından yüklenemedi.
 Error=Hata
 ErrorLoadingDataFromDisk=Program diskten veri yüklemeye çalışırken bir hatayla karşılaştı. 
 ErrorLoadingJam54LauncherConfig=Jam54LauncherConfig.properties'den yapılandırma/tercihler yüklenemedi
