--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -1,3 +1,6 @@
+CouldntCloseDAC=无法关闭 "数据访问环境"
+CouldntCreateDAC=无法创建 "数据访问环境"
+CouldntLoadApplicationInfos=无法从数据库加载应用程序的详细信息。
 Error=错误
 ErrorLoadingDataFromDisk=程序在尝试从磁盘加载数据时遇到错误。
 ErrorLoadingJam54LauncherConfig=无法从 Jam54LauncherConfig.properties 加载配置/首选项
