Translated the app

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=فشل بدء برنامج التحديث
 Ok=نعم
 Restart=إعادة بدء
 UpdateAvailable=يتوفر إصدار محدث من Jam54Launcher وسيتم تثبيته عند الإطلاق التالي.
+AllPlatforms=جميع المنصات
+Alphabetical=مرتب أبجديًا
+Android=أندرويد
+BackToLibrary=العودة إلى المكتبة
+CALCULATINGHASHES=حساب التجزئة
+CloseAppsAndDownloads=يرجى إغلاق جميع التطبيقات التي يتم تشغيلها حاليًا والتي تم تثبيتها باستخدام Jam54Launcher وإلغاء أي تنزيلات جارية.
+CloseOpenedAppBeforeUninstall=يرجى التأكد من إغلاق "{0}" قبل المتابعة في عملية إلغاء التثبيت.
+CouldntCalculateHash=تعذر حساب التجزئة
+CouldntCreateShortcut=تعذر إنشاء اختصار.
+CouldntLoadLanguages=لا يتم تحميل قائمة اللغات المدعومة
+CouldntRetrieveLauncherVersion=تعذر استرداد إصدار المشغل
+CreateDesktopShortcut=إنشاء اختصار لسطح المكتب
+CurrentlyInstalledApps=التطبيقات المثبتة حاليًا
+Download=تنزيل
+DOWNLOADING=جارٍ التنزيل
+ErrorMergeSplitFiles=واجه خطأ أثناء محاولة دمج الملفات المقسمة.
+ErrorReadingSplitTXT=واجه خطأ أثناء محاولة قراءة Split.txt
+Games=الألعاب
+GamesProgramsInstallationPath=مسار تثبيت الألعاب والبرامج
+GoToStorePage=انتقل إلى صفحة المتجر
+INSTALL=تثبيت
+InstallationLocation=موقع التثبيت
+INSTALLING=جاري التثبيت
+KindlyHoldForInstall=يرجى الانتظار بينما يختتم "{0}" إجراءات التثبيت الخاصة به.
+KindlyHoldForUninstall=يرجى الانتظار حتى ينتهي إجراء إلغاء التثبيت "{0}".
+KindlyHoldForValidationProcedure=يرجى الانتظار بينما يختتم "{0}" إجراء التحقق من صحة الملف.
+Language=اللغة
+LastUpdated=آخر تحديث
+LatestUpdate=آخر المستجدات
+Launch=إطلاق
+NoAppsForFilters=لم تكن هناك تطبيقات تطابق عوامل التصفية التي حددتها.
+Platform=المنصة
+Programs=البرامج
+ReleaseDate=تاريخ الإصدار
+REMOVINGOLDFILES=إزالة الملفات القديمة
+RestartRequiredForEffect=لن يسري تغيير هذا الإعداد إلا بعد إعادة التشغيل.
+Search=بحث
+Settings=الإعدادات
+SortBy=فرز حسب:
+START=البدء
+Uninstall=إلغاء التثبيت
+UNINSTALL=إلغاء التثبيت
+UNINSTALLING=إلغاء التثبيت
+Update=تحديث
+UPDATE=تحديث
+VerifyFileIntegrity=التحقق من سلامة الملف
+Version=الإصدار
+Web=الويب
+Windows=النوافذ
