--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Der Updater konnte nicht gestartet werden
 Ok=OK
 Restart=Neu starten
 UpdateAvailable=Eine aktualisierte Version von Jam54Launcher ist verfügbar und wird beim nächsten Start installiert.
+AllPlatforms=Alle Plattformen
+Alphabetical=Alphabetisch
+Android=Android
+BackToLibrary=Zurück zur Bibliothek
+CALCULATINGHASHES=BERECHNUNG VON HASHES
+CloseAppsAndDownloads=Bitte schließen Sie alle aktuell ausgeführten Apps, die mit dem Jam54Launcher installiert wurden, und brechen Sie alle laufenden Downloads ab.
+CloseOpenedAppBeforeUninstall=Bitte stellen Sie sicher, dass "{0}" geschlossen ist, bevor Sie mit der Deinstallation fortfahren.
+CouldntCalculateHash=Hash konnte nicht berechnet werden
+CouldntCreateShortcut=Verknüpfung konnte nicht erstellt werden.
+CouldntLoadLanguages=Liste der unterstützten Sprachen konntenicht geladen werden
+CouldntRetrieveLauncherVersion=Die Version des Launchers konnte nicht abgerufen werden
+CreateDesktopShortcut=Desktop-Verknüpfung erstellen
+CurrentlyInstalledApps=Derzeit installierte Apps
+Download=Herunterladen
+DOWNLOADING=WIRD HERUNTERGELADEN
+ErrorMergeSplitFiles=Beim Versuch, geteilte Dateien zusammenzuführen, ist ein Fehler aufgetreten.
+ErrorReadingSplitTXT=Beim Versuch, Split.txt zu lesen, ist ein Fehler aufgetreten
+Games=Spiele
+GamesProgramsInstallationPath=Installationspfad für Spiele und Programme
+GoToStorePage=Gehe zu Shop-Seite
+INSTALL=INSTALLIEREN
+InstallationLocation=Aufstellort
+INSTALLING=INSTALLATION LÄUFT
+KindlyHoldForInstall=Bitte warten Sie, bis "{0}" den Installationsvorgang abgeschlossen hat.
+KindlyHoldForUninstall=Bitte warten Sie, bis die Deinstallation von "{0}" abgeschlossen ist.
+KindlyHoldForValidationProcedure=Bitte warten Sie, bis "{0}" seine Dateivalidierungsprozedur abgeschlossen hat.
+Language=Sprache
+LastUpdated=Zuletzt aktualisiert
+LatestUpdate=Letztes Update
+Launch=Start
+NoAppsForFilters=Es gab keine Anwendungen, die den von Ihnen angegebenen Filtern entsprachen.
+Platform=Plattform
+Programs=Programme
+ReleaseDate=Veröffentlichungsdatum
+REMOVINGOLDFILES=ALTE DATEIEN ENTFERNEN
+RestartRequiredForEffect=Die Änderung dieser Einstellung wird erst nach einem Neustart wirksam.
+Search=Suchen
+Settings=Einstellungen
+SortBy=Sortieren nach:
+START=START
+Uninstall=Deinstallieren
+UNINSTALL=DEINSTALLIEREN
+UNINSTALLING=DEINSTALLATION LÄUFT
+Update=Aktualisieren
+UPDATE=AKTUALISIEREN
+VerifyFileIntegrity=Überprüfen Sie die Dateiintegrität
+Version=Version
+Web=Web
+Windows=Windows
