--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Error al iniciar el actualizador
 Ok=OK
 Restart=Reiniciar
 UpdateAvailable=Una versión actualizada de Jam54Launcher está disponible y se instalará en el próximo lanzamiento.
+AllPlatforms=Todas las plataformas
+Alphabetical=Alfabético
+Android=Android
+BackToLibrary=Volver a la biblioteca
+CALCULATINGHASHES=CÁLCULO DE HASHES
+CloseAppsAndDownloads=Por favor, cierre todas las aplicaciones actualmente en ejecución que se instalaron utilizando el Jam54Launcher y cancele cualquier descarga en curso.
+CloseOpenedAppBeforeUninstall=Por favor, asegúrese de que "{0}" está cerrado antes de proceder con el proceso de desinstalación.
+CouldntCalculateHash=No se ha podido calcular el hash
+CouldntCreateShortcut=No se ha podido crear el acceso directo.
+CouldntLoadLanguages=No se puede cargar la lista de idiomas soportados
+CouldntRetrieveLauncherVersion=No se ha podido recuperar la versión del lanzador
+CreateDesktopShortcut=Crear acceso directo al escritorio
+CurrentlyInstalledApps=Aplicaciones instaladas actualmente
+Download=Descargar
+DOWNLOADING=DESCARGAR
+ErrorMergeSplitFiles=Se ha producido un error al intentar combinar archivos divididos.
+ErrorReadingSplitTXT=Se ha producido un error al intentar leer Split.txt
+Games=Juegos
+GamesProgramsInstallationPath=Ruta de instalación de Juegos y Programas
+GoToStorePage=Ir a la página de la tienda
+INSTALL=INSTALAR
+InstallationLocation=Lugar de instalación
+INSTALLING=INSTALACIÓN
+KindlyHoldForInstall=Espere a que "{0}" finalice el proceso de instalación.
+KindlyHoldForUninstall=Espere a que finalice el proceso de desinstalación de "{0}".
+KindlyHoldForValidationProcedure=Por favor, espere mientras "{0}" concluye su procedimiento de validación de archivos.
+Language=Idioma
+LastUpdated=Última actualización
+LatestUpdate=Última actualización
+Launch=Lanzamiento
+NoAppsForFilters=No había aplicaciones que coincidieran con los filtros que especificaste.
+Platform=Plataforma
+Programs=Programas
+ReleaseDate=Fecha de publicación
+REMOVINGOLDFILES=ELIMINAR ARCHIVOS ANTIGUOS
+RestartRequiredForEffect=El cambio de esta configuración sólo tendrá efecto después de un reinicio.
+Search=Buscar en
+Settings=Ajustes
+SortBy=Ordenar por:
+START=INICIO
+Uninstall=Desinstalar
+UNINSTALL=DESINSTALAR
+UNINSTALLING=DESINSTALACIÓN
+Update=Actualización
+UPDATE=ACTUALIZACIÓN
+VerifyFileIntegrity=Verificar la integridad de los archivos
+Version=Versión
+Web=Web
+Windows=Windows
