--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Värskendaja käivitamine ebaõnnestus
 Ok=Okei
 Restart=Taaskäivita
 UpdateAvailable=Jam54Launcheri värskendatud versioon on saadaval ja installitakse järgmisel käivitamisel.
+AllPlatforms=Kõik platvormid
+Alphabetical=Tähestikuline
+Android=Android
+BackToLibrary=Tagasi raamatukogusse
+CALCULATINGHASHES=RÄSI ARVUTAMINE
+CloseAppsAndDownloads=Sulgege kõik praegu töötavad rakendused, mis installiti Jam54Launcheri abil, ja tühistage kõik käimasolevad allalaadimised.
+CloseOpenedAppBeforeUninstall=Enne desinstalliprotsessi jätkamist veenduge, et "{0}" on suletud.
+CouldntCalculateHash=Räsi ei saanud arvutada
+CouldntCreateShortcut=Otseteed ei saanud luua.
+CouldntLoadLanguages=Toetatud keelte loendit ei saanud laadida
+CouldntRetrieveLauncherVersion=Käivitusprogrammi versiooni ei saanud tuua
+CreateDesktopShortcut=Looge töölaua otsetee
+CurrentlyInstalledApps=Praegu installitud rakendused
+Download=Lae alla
+DOWNLOADING=ALLALAADIMINE
+ErrorMergeSplitFiles=Tükeldatud failide liitmisel ilmnes viga.
+ErrorReadingSplitTXT=Split.txt lugemisel ilmnes viga
+Games=Mängud
+GamesProgramsInstallationPath=Mängude ja programmide installitee
+GoToStorePage=Minge poe lehele
+INSTALL=PAIGALDA
+InstallationLocation=Paigalduskoht
+INSTALLING=PAIGALDAMINE
+KindlyHoldForInstall=Palun oodake, kuni "{0}" oma installiprotseduuri lõpetab.
+KindlyHoldForUninstall=Oodake, kuni "{0}" desinstallimisprotseduur on lõppenud.
+KindlyHoldForValidationProcedure=Palun oodake, kuni "{0}" lõpetab faili kinnitamise protseduuri.
+Language=Keel
+LastUpdated=Viimati uuendatud
+LatestUpdate=Viimane värskendus
+Launch=Käivitage
+NoAppsForFilters=Teie määratud filtritele vastavaid rakendusi ei leitud.
+Platform=Platvorm
+Programs=Programmid
+ReleaseDate=Väljalaske kuupäev
+REMOVINGOLDFILES=VANADE FAILIDE EEMALDAMINE
+RestartRequiredForEffect=Selle sätte muutmine jõustub alles pärast taaskäivitamist.
+Search=Otsing
+Settings=Seaded
+SortBy=Sorteerima:
+START=START
+Uninstall=Desinstallige
+UNINSTALL=DESINSTALLIMINE
+UNINSTALLING=DESINSTALLIMINE
+Update=Värskenda
+UPDATE=VÄRSKENDAMINE
+VerifyFileIntegrity=Kontrollige faili terviklikkust
+Version=Versioon
+Web=Veeb
+Windows=Windows
