--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Échec du démarrage de l'outil de mise à jour
 Ok=D'ACCORD
 Restart=Redémarrer
 UpdateAvailable=Une version mise à jour de Jam54Launcher est disponible et sera installée au prochain lancement.
+AllPlatforms=Toutes les plateformes
+Alphabetical=Alphabétique
+Android=Android
+BackToLibrary=Retour à la bibliothèque
+CALCULATINGHASHES=LE CALCUL DES HACHAGES
+CloseAppsAndDownloads=Veuillez fermer toutes les applications en cours d'exécution qui ont été installées à l'aide de Jam54Launcher et annuler tous les téléchargements en cours.
+CloseOpenedAppBeforeUninstall=Assurez-vous que "{0}" est fermé avant de procéder à la désinstallation.
+CouldntCalculateHash=Impossible de calculer le hachage
+CouldntCreateShortcut=Impossible de créer un raccourci.
+CouldntLoadLanguages=Impossible de charger la liste des langues prises en charge
+CouldntRetrieveLauncherVersion=Impossible de récupérer la version du lanceur
+CreateDesktopShortcut=Créer un raccourci sur le bureau
+CurrentlyInstalledApps=Applications actuellement installées
+Download=Télécharger
+DOWNLOADING=TELECHARGEMENT
+ErrorMergeSplitFiles=Une erreur s'est produite lors de la fusion de fichiers fractionnés.
+ErrorReadingSplitTXT=Une erreur s'est produite lors de la lecture du fichier Split.txt.
+Games=Jeux
+GamesProgramsInstallationPath=Chemin d'installation des jeux et programmes
+GoToStorePage=Aller à la page du magasin
+INSTALL=INSTALLER
+InstallationLocation=Lieu d'installation
+INSTALLING=INSTALLATION
+KindlyHoldForInstall=Maintenez le bouton enfoncé pendant que "{0}" termine sa procédure d'installation.
+KindlyHoldForUninstall=Patientez jusqu'à la fin de la procédure de désinstallation de "{0}".
+KindlyHoldForValidationProcedure=Veuillez patienter pendant que "{0}" termine sa procédure de validation de fichier.
+Language=Langue
+LastUpdated=Dernière mise à jour
+LatestUpdate=Dernière mise à jour
+Launch=Lancement
+NoAppsForFilters=Aucune application ne correspond aux filtres que vous avez spécifiés.
+Platform=Plate-forme
+Programs=Les programmes
+ReleaseDate=Date de sortie
+REMOVINGOLDFILES=SUPPRESSION D'ANCIENS FICHIERS
+RestartRequiredForEffect=La modification de ce paramètre ne prendra effet qu'après un redémarrage.
+Search=Recherche
+Settings=Paramètres
+SortBy=Trier par :
+START=START
+Uninstall=Désinstaller
+UNINSTALL=DÉSINSTALLER
+UNINSTALLING=DÉMONTAGE
+Update=Mise à jour
+UPDATE=MISE À JOUR
+VerifyFileIntegrity=Vérifier l'intégrité des fichiers
+Version=Version
+Web=Web
+Windows=Fenêtres
