--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Gagal memulai Pembaruan
 Ok=Oke
 Restart=Mengulang kembali
 UpdateAvailable=Versi terbaru dari Jam54Launcher tersedia dan akan diinstal pada peluncuran berikutnya.
+AllPlatforms=Semua Platform
+Alphabetical=Alfabetis
+Android=Android
+BackToLibrary=Kembali Ke Perpustakaan
+CALCULATINGHASHES=MENGHITUNG HASH
+CloseAppsAndDownloads=Harap tutup semua aplikasi yang sedang berjalan yang dipasang menggunakan Jam54Launcher dan batalkan semua unduhan yang sedang berlangsung.
+CloseOpenedAppBeforeUninstall=Harap pastikan bahwa "{0}" ditutup sebelum melanjutkan proses pencopotan pemasangan.
+CouldntCalculateHash=Tidak dapat menghitung hash
+CouldntCreateShortcut=Tidak dapat membuat pintasan.
+CouldntLoadLanguages=Tidak dapat memuat daftar bahasa yang didukung
+CouldntRetrieveLauncherVersion=Tidak dapat mengambil versi peluncur
+CreateDesktopShortcut=Buat Pintasan Desktop
+CurrentlyInstalledApps=Aplikasi yang terinstal saat ini
+Download=Unduh
+DOWNLOADING=MENGUNDUH
+ErrorMergeSplitFiles=Mengalami kesalahan saat mencoba menggabungkan file yang terpisah.
+ErrorReadingSplitTXT=Mengalami kesalahan saat mencoba membaca Split.txt
+Games=permainan
+GamesProgramsInstallationPath=Jalur instalasi Game & Program
+GoToStorePage=Buka Halaman Toko
+INSTALL=INSTALL
+InstallationLocation=Lokasi Instalasi
+INSTALLING=MENGINSTAL
+KindlyHoldForInstall=Harap tunggu sementara "{0}" mengakhiri prosedur pemasangannya.
+KindlyHoldForUninstall=Harap tunggu sampai prosedur pencopotan pemasangan "{0}" selesai.
+KindlyHoldForValidationProcedure=Harap tunggu sementara "{0}" mengakhiri prosedur validasi filenya.
+Language=Bahasa
+LastUpdated=Terakhir Diperbarui
+LatestUpdate=Pembaruan Terbaru
+Launch=Meluncurkan
+NoAppsForFilters=Tidak ada aplikasi yang cocok dengan filter yang Anda tentukan.
+Platform=Platform
+Programs=Program
+ReleaseDate=Tanggal rilis
+REMOVINGOLDFILES=MENGHAPUS FILE LAMA
+RestartRequiredForEffect=Mengubah pengaturan ini hanya akan berlaku setelah dimulai ulang.
+Search=Mencari
+Settings=Pengaturan
+SortBy=Sortir dengan:
+START=AWAL
+Uninstall=Copot pemasangan
+UNINSTALL=HAPUS
+UNINSTALLING=MENGHAPUS
+Update=Memperbarui
+UPDATE=MEMPERBARUI
+VerifyFileIntegrity=Verifikasi integritas file
+Version=Versi:
+Web=Web
+Windows=Windows
