--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=アップデーターの起動に失敗しました
 Ok=わかった
 Restart=再起動
 UpdateAvailable=Jam54Launcher の更新バージョンが利用可能で、次回の起動時にインストールされます。
+AllPlatforms=すべてのプラットフォーム
+Alphabetical=アルファベット順
+Android=アンドロイド
+BackToLibrary=ライブラリに戻る
+CALCULATINGHASHES=ハッシュ計算
+CloseAppsAndDownloads=Jam54Launcherを使用してインストールされた現在起動しているアプリをすべて終了し、進行中のダウンロードをキャンセルしてください。
+CloseOpenedAppBeforeUninstall=アンインストール作業を行う前に、"{0}" が閉じられていることを確認してください。
+CouldntCalculateHash=ハッシュの計算ができなかった
+CouldntCreateShortcut=ショートカットを作成できませんでした。
+CouldntLoadLanguages=対応言語リストを読み込むことができない
+CouldntRetrieveLauncherVersion=ランチャーのバージョンを取得できなかった
+CreateDesktopShortcut=デスクトップショートカットの作成
+CurrentlyInstalledApps=現在インストールされているアプリ
+Download=ダウンロード
+DOWNLOADING=DOWNLOADING
+ErrorMergeSplitFiles=分割されたファイルを結合しようとすると、エラーが発生する。
+ErrorReadingSplitTXT=Split.txtを読み込もうとしてエラーが発生しました。
+Games=ゲーム
+GamesProgramsInstallationPath=ゲーム＆プログラムのインストールパス
+GoToStorePage=ストアページへ
+INSTALL=インストー ル
+InstallationLocation=設置場所
+INSTALLING=インストーラー
+KindlyHoldForInstall="{0}" がインストールを終了するまで、そのままお待ちください。
+KindlyHoldForUninstall="{0}" のアンインストールが終了するまでお待ちください。
+KindlyHoldForValidationProcedure="{0}" がファイル検証を終了するまで、しばらくお待ちください。
+Language=言語
+LastUpdated=最終更新日
+LatestUpdate=最新情報
+Launch=打ち上げ
+NoAppsForFilters=指定されたフィルターに一致するアプリケーションはありませんでした。
+Platform=プラットフォーム
+Programs=プログラム
+ReleaseDate=発売日
+REMOVINGOLDFILES=古いファイルの削除
+RestartRequiredForEffect=この設定を変更すると、再起動後のみ有効になります。
+Search=検索
+Settings=設定方法
+SortBy=Sort By：
+START=START
+Uninstall=アンインストール
+UNINSTALL=アンインストール
+UNINSTALLING=アンインストール
+Update=更新
+UPDATE=アップデイト
+VerifyFileIntegrity=ファイルの整合性を確認する
+Version=バージョン
+Web=ウェブ
+Windows=ウィンドウズ
