--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=업데이터를 시작하지 못했습니다.
 Ok=확인
 Restart=재시작
 UpdateAvailable=Jam54Launcher의 업데이트된 버전을 사용할 수 있으며 다음 출시 시 설치됩니다.
+AllPlatforms=모든 플랫폼
+Alphabetical=알파벳
+Android=로봇
+BackToLibrary=라이브러리로 돌아가기
+CALCULATINGHASHES=해시 계산
+CloseAppsAndDownloads=Jam54Launcher를 사용하여 설치된 현재 실행 중인 모든 앱을 닫고 진행 중인 다운로드를 취소하십시오.
+CloseOpenedAppBeforeUninstall=제거 프로세스를 진행하기 전에 "{0}" 이 닫혀 있는지 확인하십시오.
+CouldntCalculateHash=해시를 계산할 수 없습니다.
+CouldntCreateShortcut=바로 가기를 만들 수 없습니다.
+CouldntLoadLanguages=지원되는 언어 목록을 로드할 수 없습니다.
+CouldntRetrieveLauncherVersion=런처 버전을 검색할 수 없습니다.
+CreateDesktopShortcut=바탕 화면 바로 가기 만들기
+CurrentlyInstalledApps=현재 설치된 앱
+Download=다운로드
+DOWNLOADING=다운로드
+ErrorMergeSplitFiles=분할 파일을 병합하는 동안 오류가 발생했습니다.
+ErrorReadingSplitTXT=Split을 읽는 동안 오류가 발생했습니다.txt
+Games=게임
+GamesProgramsInstallationPath=게임 및 프로그램 설치 경로
+GoToStorePage=스토어 페이지로 이동
+INSTALL=설치하다
+InstallationLocation=설치 위치
+INSTALLING=설치
+KindlyHoldForInstall="{0}" 이 설치 절차를 마칠 때까지 기다려주십시오.
+KindlyHoldForUninstall="{0}" 의 제거 절차가 완료 될 때까지 기다리십시오.
+KindlyHoldForValidationProcedure="{0}" 가 파일 유효성 검사 절차를 완료하는 동안 기다려주십시오.
+Language=언어
+LastUpdated=마지막 업데이트 날짜
+LatestUpdate=최신 업데이트
+Launch=발사
+NoAppsForFilters=지정한 필터와 일치하는 응용 프로그램이 없습니다.
+Platform=플랫폼
+Programs=프로그램
+ReleaseDate=출시일
+REMOVINGOLDFILES=오래된 파일 제거
+RestartRequiredForEffect=이 설정을 변경하면 다시 시작한 후에만 적용됩니다.
+Search=검색
+Settings=설정
+SortBy=정렬 기준:
+START=시작하다
+Uninstall=삭제하기
+UNINSTALL=삭제하기
+UNINSTALLING=제거
+Update=업데이트
+UPDATE=업데이트
+VerifyFileIntegrity=파일 무결성 확인
+Version=버전
+Web=웹
+Windows=윈도우
