--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Kan de Updater niet starten
 Ok=Oké
 Restart=Herstarten
 UpdateAvailable=Een bijgewerkte versie van Jam54Launcher is beschikbaar en zal bij de volgende lancering worden geïnstalleerd.
+AllPlatforms=Alle platforms
+Alphabetical=Alfabetisch
+Android=Android
+BackToLibrary=Terug naar de bibliotheek
+CALCULATINGHASHES=HET BEREKENEN VAN HASHES
+CloseAppsAndDownloads=Sluit alle momenteel actieve apps die met de Jam54Launcher zijn geïnstalleerd en annuleer alle lopende downloads.
+CloseOpenedAppBeforeUninstall=Zorg ervoor dat "{0}" gesloten is voordat u doorgaat met het verwijderingsproces.
+CouldntCalculateHash=Kon hash niet berekenen
+CouldntCreateShortcut=Kon geen snelkoppeling maken.
+CouldntLoadLanguages=Kan de lijst met ondersteunde talen niet laden
+CouldntRetrieveLauncherVersion=Kon de versie van de launcher niet ophalen
+CreateDesktopShortcut=Snelkoppeling naar het bureaublad maken
+CurrentlyInstalledApps=Momenteel geïnstalleerde apps
+Download=Download
+DOWNLOADING=DOWNLOADING
+ErrorMergeSplitFiles=Er is een fout opgetreden bij het samenvoegen van gesplitste bestanden.
+ErrorReadingSplitTXT=Er is een fout opgetreden tijdens het lezen van Split.txt.
+Games=Spelletjes
+GamesProgramsInstallationPath=Games & Programma's installatiepad
+GoToStorePage=Ga naar de winkelpagina
+INSTALL=INSTALLEREN
+InstallationLocation=Plaats van installatie
+INSTALLING=INSTALLEREN
+KindlyHoldForInstall=Wacht even terwijl "{0}" de installatieprocedure afrondt.
+KindlyHoldForUninstall=Wacht even tot de deïnstallatieprocedure van "{0}" klaar is.
+KindlyHoldForValidationProcedure=Wacht even terwijl "{0}" zijn bestandsvalidatieprocedure afrondt.
+Language=Taal
+LastUpdated=Laatst bijgewerkt
+LatestUpdate=Laatste update
+Launch=Lancering
+NoAppsForFilters=Er waren geen toepassingen die voldeden aan de door u opgegeven filters.
+Platform=Platform
+Programs=Programma's
+ReleaseDate=Verschijningsdatum
+REMOVINGOLDFILES=VERWIJDEREN VAN OUDE BESTANDEN
+RestartRequiredForEffect=Het wijzigen van deze instelling wordt pas van kracht na een herstart.
+Search=Zoek op
+Settings=Instellingen
+SortBy=Sorteren op:
+START=START
+Uninstall=Verwijder
+UNINSTALL=UNINSTALL
+UNINSTALLING=UNINSTALLING
+Update=Update
+UPDATE=UPDATE
+VerifyFileIntegrity=Controleer de integriteit van het bestand
+Version=Versie
+Web=Web
+Windows=Windows
