--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=无法启动更新程序
 Ok=好的
 Restart=重新开始
 UpdateAvailable=Jam54Launcher 的更新版本可用，并将在下次启动时安装。
+AllPlatforms=所有平台
+Alphabetical=按字母顺序
+Android=安卓
+BackToLibrary=回到图书馆
+CALCULATINGHASHES=计算哈希值
+CloseAppsAndDownloads=请关闭使用 Jam54Launcher 安装的所有当前正在运行的应用程序，并取消任何正在进行的下载。
+CloseOpenedAppBeforeUninstall=在继续卸载过程之前，请确保 "{0}" 已关闭。
+CouldntCalculateHash=无法计算哈希
+CouldntCreateShortcut=无法创建快捷方式。
+CouldntLoadLanguages=无法加载支持的语言列表
+CouldntRetrieveLauncherVersion=无法检索启动器的版本
+CreateDesktopShortcut=创建桌面快捷方式
+CurrentlyInstalledApps=当前安装的应用程序
+Download=下载
+DOWNLOADING=下载中
+ErrorMergeSplitFiles=尝试合并拆分文件时遇到错误。
+ErrorReadingSplitTXT=尝试读取 Split.txt 时遇到错误
+Games=游戏
+GamesProgramsInstallationPath=游戏和程序安装路径
+GoToStorePage=前往商店页面
+INSTALL=安装
+InstallationLocation=安装位置
+INSTALLING=安装
+KindlyHoldForInstall=请稍候，"{0}" 正在完成其安装过程。
+KindlyHoldForUninstall=请稍等，直到 "{0}" 的卸载程序完成。
+KindlyHoldForValidationProcedure=请稍候，"{0}" 正在完成其文件验证程序。
+Language=语言
+LastUpdated=最近更新时间
+LatestUpdate=最新更新
+Launch=发射
+NoAppsForFilters=没有与您指定的过滤器相匹配的应用程序。
+Platform=平台
+Programs=程式
+ReleaseDate=发布日期
+REMOVINGOLDFILES=删除旧文件
+RestartRequiredForEffect=更改此设置只会在重新启动后生效。
+Search=搜索
+Settings=设置
+SortBy=排序方式：
+START=开始
+Uninstall=卸载
+UNINSTALL=卸载
+UNINSTALLING=卸载
+Update=更新
+UPDATE=更新
+VerifyFileIntegrity=验证文件完整性
+Version=版本
+Web=网络
+Windows=视窗
