--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Falha ao iniciar o atualizador
 Ok=OK
 Restart=Reiniciar
 UpdateAvailable=Uma versão atualizada do Jam54Launcher está disponível e será instalada no próximo lançamento.
+AllPlatforms=Todas as plataformas
+Alphabetical=Alfabético
+Android=Andróide
+BackToLibrary=Voltar à Biblioteca
+CALCULATINGHASHES=CALCULANDO HASHES
+CloseAppsAndDownloads=Feche todos os aplicativos atualmente em execução que foram instalados usando o Jam54Launcher e cancele todos os downloads em andamento.
+CloseOpenedAppBeforeUninstall=Certifique-se de que o "{0}" esteja fechado antes de prosseguir com o processo de desinstalação.
+CouldntCalculateHash=Não foi possível calcular o hash
+CouldntCreateShortcut=Não foi possível criar atalho.
+CouldntLoadLanguages=Coulnd't carregar a lista de idiomas suportados
+CouldntRetrieveLauncherVersion=Não foi possível recuperar a versão do iniciador
+CreateDesktopShortcut=Criar atalho da área de trabalho
+CurrentlyInstalledApps=Aplicativos atualmente instalados
+Download=Baixar
+DOWNLOADING=TRANSFERINDO
+ErrorMergeSplitFiles=Encontrado um erro ao tentar mesclar arquivos divididos.
+ErrorReadingSplitTXT=Encontrado um erro ao tentar ler Split.txt
+Games=Jogos
+GamesProgramsInstallationPath=Caminho de instalação de Jogos e Programas
+GoToStorePage=Ir para a página da Loja
+INSTALL=INSTALAR
+InstallationLocation=Local de instalação
+INSTALLING=INSTALAR
+KindlyHoldForInstall=Por favor, aguarde enquanto "{0}" conclui seu procedimento de instalação.
+KindlyHoldForUninstall=Por favor, aguarde até que o procedimento de desinstalação do "{0}" termine.
+KindlyHoldForValidationProcedure=Por favor, aguarde enquanto "{0}" conclui seu procedimento de validação de arquivo.
+Language=Idioma
+LastUpdated=Última atualização
+LatestUpdate=Última atualização
+Launch=Lançar
+NoAppsForFilters=Não havia aplicativos que correspondessem aos filtros especificados.
+Platform=Plataforma
+Programs=Programas
+ReleaseDate=Data de Lançamento
+REMOVINGOLDFILES=REMOVENDO ARQUIVOS ANTIGOS
+RestartRequiredForEffect=Alterar essa configuração só terá efeito após uma reinicialização.
+Search=Procurar
+Settings=Configurações
+SortBy=Ordenar por:
+START=COMEÇAR
+Uninstall=Desinstalar
+UNINSTALL=DESINSTALAR
+UNINSTALLING=DESINSTALANDO
+Update=Atualização
+UPDATE=ATUALIZAÇÃO
+VerifyFileIntegrity=Verificar a integridade do arquivo
+Version=Versão
+Web=Teia
+Windows=Windows
