--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -11,3 +11,52 @@ FailedToStartUpdater=Güncelleyici başlatılamadı
 Ok=TAMAM
 Restart=Tekrar başlat
 UpdateAvailable=Jam54Launcher'ın güncellenmiş bir sürümü mevcut ve bir sonraki başlatmada yüklenecek.
+AllPlatforms=Tüm Platformlar
+Alphabetical=Alfabetik
+Android=Android
+BackToLibrary=Kitaplığa Geri Dön
+CALCULATINGHASHES=HASH'LERI HESAPLAMA
+CloseAppsAndDownloads=Lütfen Jam54Launcher kullanılarak yüklenmiş olan ve çalışmakta olan tüm uygulamaları kapatın ve devam eden indirmeleri iptal edin.
+CloseOpenedAppBeforeUninstall=Lütfen kaldırma işlemine devam etmeden önce "{0}" kapalı olduğundan emin olun.
+CouldntCalculateHash=Karma hesaplanamadı
+CouldntCreateShortcut=Kısayol oluşturulamadı.
+CouldntLoadLanguages=Coulnd, desteklenen dillerin listesini yüklemiyor
+CouldntRetrieveLauncherVersion=Başlatıcının sürümü alınamadı
+CreateDesktopShortcut=Masaüstü Kısayolu Oluşturma
+CurrentlyInstalledApps=Şu anda yüklü uygulamalar
+Download=İndirmek
+DOWNLOADING=INDİRİYOR
+ErrorMergeSplitFiles=Bölünmüş dosyaları birleştirmeye çalışırken bir hatayla karşılaştım.
+ErrorReadingSplitTXT=Split'i okumaya çalışırken bir hatayla karşılaştınız.txt
+Games=Oyunlar
+GamesProgramsInstallationPath=Oyunlar ve Programlar yükleme yolu
+GoToStorePage=Mağaza Sayfasına Git
+INSTALL=YÜKLEMEK
+InstallationLocation=Yükleme Konumu
+INSTALLING=YÜKLEME
+KindlyHoldForInstall=Lütfen "{0}" kurulum prosedürünü tamamlarken bekleyin.
+KindlyHoldForUninstall=Lütfen "{0}" kaldırma prosedürü bitene kadar bekleyin.
+KindlyHoldForValidationProcedure=Lütfen "{0}" dosya doğrulama prosedürünü tamamlarken bekleyin.
+Language=Dil
+LastUpdated=Son Güncelleme
+LatestUpdate=Son Güncelleme
+Launch=Başlat
+NoAppsForFilters=Belirttiğiniz filtrelerle eşleşen uygulama yoktu.
+Platform=Peron
+Programs=Program
+ReleaseDate=Çıkış Tarihi
+REMOVINGOLDFILES=ESKI DOSYALARI KALDIRMA
+RestartRequiredForEffect=Bu ayarın değiştirilmesi yalnızca yeniden başlatmadan sonra etkili olur.
+Search=Aramak
+Settings=Ayarlar
+SortBy=Sıralama Ölçütü:
+START=BAŞLAMAK
+Uninstall=Kaldırma
+UNINSTALL=KALDIRMA
+UNINSTALLING=KALDIRMA
+Update=Güncelleştirmek
+UPDATE=GÜNCELLEŞTİRMEK
+VerifyFileIntegrity=Dosya bütünlüğünü doğrulama
+Version=Sürüm
+Web=Web
+Windows=Windows
